fix icon alignment (#14)
* fix icon alignment

--- a/src/components/mf-icon/mf-icon.css
+++ b/src/components/mf-icon/mf-icon.css
@@ -3,9 +3,7 @@
   --icon-width: 1em;
   --icon-height: 1em;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  vertical-align: middle;
 }
 
 svg {
